--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Dados de conexão com o banco H2
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=admin
-spring.datasource.password=
+spring.datasource.password=admin
 
 #Configuração do cliente web do banco H2
 spring.h2.console.enabled=true
