Introdução da biblioteca Lombok e transferência da expressão lambda para dentro do método findAll

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 #Configuração pra mostrar o SQL no console
-spring.jpa.show-sql = true
+#spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
